package LEBOCQTitouan.edu.model.entities;

import LEBOCQTitouan.edu.model.commands.InterMediatorCommand;

import java.util.ArrayList;
import java.util.List;

public class Robot {
    public List<InterMediatorCommand> compute() {
        ArrayList<InterMediatorCommand> generatedCommands = new ArrayList<>();
        return generatedCommands;
    }
}
