package LEBOCQTitouan.edu.model.entities;

import LEBOCQTitouan.edu.model.commands.InterMediatorCommand;
import LEBOCQTitouan.edu.model.drivers.InterMediator;

import java.util.ArrayList;
import java.util.List;

public class Shockwave {
    public List<InterMediatorCommand> propagate() {
        ArrayList<InterMediatorCommand> generatedCommands = new ArrayList<>();
        return generatedCommands;
    }
}
